--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@angular/http": "5.0.1",
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
+    "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/file": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.4.2",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "angular2-jwt": "^0.2.3",
+    "cordova-android": "~6.3.0",
+    "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -37,8 +41,7 @@
     "ng2-validation": "^4.2.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.2",
@@ -52,7 +55,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
