--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/file": "^4.5.2",
+    "@ionic-native/file-transfer": "^4.5.2",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.4.2",
@@ -33,6 +34,7 @@
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -63,7 +65,8 @@
       "cordova-plugin-file": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+      },
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android"
