--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.4.2",
-    "@ionic-native/status-bar": "4.4.0",
+    "@ionic-native/status-bar": "^4.4.0",
     "@ionic/storage": "2.1.3",
     "angular2-jwt": "^0.2.3",
     "cordova-android": "~6.3.0",
