--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.4.2",
-    "@ionic-native/status-bar": "^4.4.0",
+    "@ionic-native/status-bar": "^4.5.3",
     "@ionic/storage": "2.1.3",
     "angular2-jwt": "^0.2.3",
     "cordova-android": "~6.3.0",
@@ -38,6 +38,7 @@
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.1.2",
     "ionic-angular": "3.9.2",
@@ -66,7 +67,8 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android"
